--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -46,7 +46,7 @@
   --button-background-color_-2: green;
   --button-background-color_-3: blue;
   --button-background-color_-4: black;
-  --button-background-color_-5: black;
+  --button-background-color_-5: rgb(207, 138, 138);
   --button-background-gradient_-0: linear-gradient(to bottom right, #EF4765, #FF9A5A);
   --button-background-gradient_-1: linear-gradient(to bottom right, #4766ef, #5ad0ff);
   --button-box-shadow_-0: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
@@ -60,17 +60,17 @@ body {
 }
     
 /* Change the white to any color ;) */
-input:-webkit-autofill,
+/* input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
-}
+} */
     
 /*Change text in autofill textbox*/
-input:-webkit-autofill {
+/* input:-webkit-autofill {
   -webkit-text-fill-color: var(--primary-color1) !important;
-}
+} */
     
 .sticky {
   position: fixed;
@@ -255,31 +255,10 @@ justify-content: center;
 
 
 
-/* input */
+/* _Styles_User_Example */
 
-._inpt {
-    border: none;
-border-bottom: 0.125rem solid rgba(19, 19, 21, 0.6);
-width: 100%;
-height: 2rem;
-font-size: 1.0625rem;
-padding-left: 0.875rem;
-line-height: 147.6%;
-padding-top: 0.825rem;
-padding-bottom: 0.5rem;
-}
-
- ._inpt > input:focus {
-  outline: none;
-}
-
-._lbl {
-    position: absolute;
-top: 0.9375rem;
-left: 0.875rem;
-line-height: 147.6%;
-color: rgba(19, 19, 21, 0.6);
-transition: top .2s;
+._Example {
+    display: flex;
 }
 
  
