--- a/style/patucoSchema.css
+++ b/style/patucoSchema.css
@@ -258,6 +258,42 @@ textarea {
   width: 90%;
   left: calc(50% - (90% / 2));
 } 
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px
+  }
+
+.sm:flex {
+  display: flex;
+}
+
+.sm:w-1\/3 {
+  width: 33%;
+}
+
+.sm:w-2\/3 {
+  width: 66%;
+}
+}
+
+@media (min-width: 768px) {
+.container {
+  max-width: 768px;
+}
+
+.md:w-1\/3 {
+  width: 33%;
+}
+
+.md:w-2\/3 {
+  width: 66%;
+}
+
+.md:w-770 {
+  width: 770px;
+}
+}
 ._vh1 {
     height: 100vh;
 }
